# openclaw-chat

./: CHANGELOG.md  GITHUB_RELEASES.md  README.md  RELEASE_NOTES_TEMPLATE.md  package-lock.json  package.json
.github/workflows/: release.yml
docs/: RELEASES.md
scripts/: capture-release-screenshots.sh
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: db.rs  kanban.rs  lib.rs  main.rs  obsidian.rs  openclaw.rs  proactive.rs  ssh.rs  watcher.rs
src/components/: BrainDump.tsx  CardPopupModal.tsx  ChatView.tsx  InputBar.tsx  KanbanBoard.tsx  KanbanCard.tsx  KanbanColumn.tsx  MessageBubble.tsx  NewProjectModal.tsx  NewThreadModal.tsx  ProjectView.tsx  SettingsPanel.tsx  Sidebar.tsx
src/hooks/: useChat.ts  useProjects.ts  useTheme.ts
src/lib/: markdown.ts  tauri.ts
