[package]
name = "openclaw-chat"
version = "0.1.0"
description = "OpenClaw Chat — ChatGPT-style interface for OpenClaw"
authors = ["clawdbot1"]
edition = "2021"

[lib]
name = "openclaw_chat_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
notify = "6"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
openssh = { version = "0.10", features = ["native-mux"] }
openssh-sftp-client = "0.14"
anyhow = "1"
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
